# HelixDrone-HybridCore

./: .gitignore  =2.10.0  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  Requirements.txt  build_output.txt  debug_lstm_agent.py  diag_results.txt  diagnose_obs_mismatch.py  diagnose_output.txt  find_hover_rpm.py  setup.py  test_output.txt  test_sota_quick.py  test_stability_random.py  transition_test_results.txt  ultra_debug_crash.py  verify_fix.py
config/: physics_params.yaml  train_params.yaml
cpp_core/include/: ActuatorFailure.h  CollisionWorld.h  PayloadDynamics.h  PhysicsEngine.h  Quadrotor.h  ReplayBuffer.h  SIMDMath.h  SOTAActuator.h  StateEstimator.h  Types.h
cpp_core/src/: ActuatorFailure.cpp  CollisionWorld.cpp  PayloadDynamics.cpp  PhysicsEngine.cpp  Quadrotor.cpp  SOTAActuator.cpp  StateEstimator.cpp  bindings.cpp
python_src/: __init__.py
python_src/agents/: __init__.py  ddpg_agent.py  networks.py  replay_buffer.py
python_src/envs/: __init__.py  drone_env.py  frame_stack.py  motor_mixer.py  observation_builder.py  reward_functions.py
python_src/helix_drone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python_src/training/: __init__.py  domain_randomizer.py
python_src/utils/: __init__.py  csv_logger.py  helix_math.py  visualization.py
replay/: unity_replay_ep0.csv
replays/: unity_replay_ep0.csv  unity_replay_ep1.csv  unity_replay_ep2.csv
scripts/: analizar_vuelo.py  analyze_rpm_differential.py  analyze_target.py  calibrate_hover.py  calibration_output.txt  debug_physics.py  diag_output.txt  diag_pipeline_output.txt  diagnose_collapse.py  diagnose_crash.py  diagnose_lstm_mismatch.py  diagnose_physics.py  diagnose_pipeline.py  eval.py  generate_replay.py  test_hover.py  test_mixer.py  test_physics_debug.py  train.py  validate_physics.py
tests/: test_agent.py  test_env_v2.py  test_flight.py  test_physics.cpp  test_replay_buffer.py  test_sota_actuator.py
wandb/run-20260102_225220-ay7fgisb/: run-ay7fgisb.wandb
wandb/run-20260102_225220-ay7fgisb/files/: requirements.txt  wandb-metadata.json
wandb/run-20260102_230413-lcrjzqgo/: run-lcrjzqgo.wandb
wandb/run-20260102_230413-lcrjzqgo/files/: wandb-metadata.json
